# developtools_hiperf

./: 1.txt  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  UT_COVERAGE_REPORT.md  bundle.json  clang_format_all.bat  hiperf.gni  ohos.build
etc/: hiperf.cfg  hiperf.para  hiperf.para.dac
include/: arm_raw_event_type_table.h  callstack.h  callstack_processor.h  command.h  command_reporter.h  debug_logger.h  dwarf_encoding.h  elf_parser.h  hash_list_template.h  hashlist.h  hashlist.hpp  hiperf_hilog.h  hiperf_libreport.h  ipc_utilities.h  kernel_symbol_loader.h  mem_map_item.h  memory_map_manager.h  mingw_adapter.h  option.h  option_debug.h  perf_event_record.h  perf_events.h  perf_file_format.h  perf_file_reader.h  perf_file_writer.h  perf_pipe.h  perf_record_format.h  record_processor.h  register.h  report.h  report_json_file.h  report_protobuf_file.h  ring_buffer.h  runtime_context.h  smo_processor.h  spe_decoder.h  subcommand.h  subcommand_dump.h  subcommand_help.h  subcommand_list.h  (+11 more)
interfaces/innerkits/native/hiperf_local/: BUILD.gn  hiperf_local.map
interfaces/innerkits/native/hiperf_local/include/: lperf.h  lperf_c.h  lperf_event_record.h  lperf_events.h  lperf_record.h
interfaces/innerkits/native/hiperf_local/src/: lperf.cpp  lperf_c.cpp  lperf_event_record.cpp  lperf_events.cpp  lperf_record.cpp
proto/: build_proto.sh  report_sample.proto
script/: Readme-CN.md  Script_README.zh.md  Script_README_zh.md  config.json  copy_uapi.sh  hiperf_annotate.py  hiperf_annotate_README_zh.md  hiperf_utils.py  make_report.py  package.sh  recv_binary_cache.py  (+2 more)
(+199 files in other folders)
