# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../hiperf.gni")

config("hiperf_local_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${hiperf_path}/include",
  ]
}

ohos_shared_library("hiperf_local") {
  install_enable = true
  public_configs = [ ":hiperf_local_config" ]
  sources = [
    "src/lperf.cpp",
    "src/lperf_c.cpp",
    "src/lperf_event_record.cpp",
    "src/lperf_events.cpp",
    "src/lperf_record.cpp",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "faultloggerd:libstack_printer",
    "faultloggerd:libunwinder",
    "hilog:libhilog",
  ]

  version_script = "hiperf_local.map"
  subsystem_name = "developtools"
  innerapi_tags = [ "platformsdk" ]
  part_name = "hiperf"
}
